--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -31,7 +32,13 @@
     "clean-webpack-plugin": "^0.1.18",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.4",
+    "rc-slider": "^8.6.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-tooltip": "^3.6.0",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "uglifyjs-webpack-plugin": "^1.2.2",
     "url-loader": "^0.6.2",
     "webpack": "^4.0.1",
